solider change to BaseModel
crud added

create + auto increment

--- a/infrastructure/k8s/mongo-depolyment.yaml
+++ b/infrastructure/k8s/mongo-depolyment.yaml
@@ -33,6 +33,11 @@ spec:
                 secretKeyRef:
                   name: mongo-secret
                   key: mongo-database
+            - name: MONGO_COLLECTION
+              valueFrom:
+                secretKeyRef:
+                  name: mongo-secret
+                  key: mongo-collection
           volumeMounts:
             - name: mongo-storage
               mountPath: /data/db
