--- a/infrastructure/k8s/db-soldier-deployment.yaml
+++ b/infrastructure/k8s/db-soldier-deployment.yaml
@@ -23,3 +23,8 @@ spec:
           envFrom:
             - secretRef:
                 name: mongo-secret
+          env:
+            - name: MONGO_HOST
+              value: mongodb
+            - name: MONGO_PORT
+              value: "27017"
