--- a/infrastructure/k8s/db-soldier-service.yaml
+++ b/infrastructure/k8s/db-soldier-service.yaml
@@ -6,7 +6,5 @@ spec:
   selector:
     app: db-soldier
   ports:
-    - protocol: TCP
-      port: 80
+    - port: 8000
       targetPort: 8000
-  type: ClusterIP
